--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.9.1"
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.63.0",
+    "react-router-dom": "^7.9.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
