--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@supabase/supabase-js": "^2.57.4",
+    "@types/react-dropzone": "^4.2.2",
     "axios": "^1.12.2",
     "ethers": "^6.15.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-router-dom": "^7.9.1",
     "socket.io-client": "^4.8.1",
     "three": "^0.180.0"
