Add PWA download button to navbar, fix Vercel config, and improve responsive layout

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -11,11 +11,15 @@
         {
           "key": "Cache-Control",
           "value": "public, max-age=0, must-revalidate"
+        },
+        {
+          "key": "Service-Worker-Allowed",
+          "value": "/"
         }
       ]
     },
     {
-      "source": "/workbox-*.js",
+      "source": "/workbox-(.*)\\.js",
       "headers": [
         {
           "key": "Cache-Control",
@@ -29,6 +33,28 @@
         {
           "key": "Content-Type",
           "value": "application/manifest+json"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600"
+        }
+      ]
+    },
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/(.*\\.(?:js|css|woff|woff2|ttf|otf|eot|svg|png|jpg|jpeg|gif|webp|ico))",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
         }
       ]
     }
