Fix: Add missing pdfkit dependency to backend
- Add pdfkit to package.json dependencies
- Required for PDF receipt generation in transaction service
- Fixes 'Cannot find module pdfkit' error

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,24 +12,25 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "axios": "^1.6.0",
-    "jsonwebtoken": "^9.0.2",
-    "@supabase/supabase-js": "^2.38.0",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.6",
-    "geoip-lite": "^1.4.7",
-    "socket.io": "^4.7.4",
     "@google-cloud/vision": "^4.0.0",
-    "tesseract.js": "^5.0.2",
-    "twilio": "^4.19.0",
-    "nodemailer": "^6.9.7",
-    "redis": "^4.6.10",
+    "@supabase/supabase-js": "^2.38.0",
+    "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.15.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "ethers": "^6.15.0"
+    "geoip-lite": "^1.4.7",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "pdfkit": "^0.15.2",
+    "redis": "^4.6.10",
+    "sharp": "^0.32.6",
+    "socket.io": "^4.7.4",
+    "tesseract.js": "^5.0.2",
+    "twilio": "^4.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
