Fix WebSocket localhost connection error in production and cleanup documentation - WebSocket fix for production environment - PWA install prompt improvements - Cleanup old fix documentation files - Add troubleshooting and cleanup guides - Update environment configuration - Add manifest.webmanifest for better PWA support

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,9 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
+dev-dist
 *.local
+.env.production
 
 # Editor directories and files
 .vscode/*
@@ -30,3 +32,7 @@ dist-ssr
 service-account-key.json
 # OAuth client secrets (different from service account keys)
 client_secret_*.json
+
+# Uploaded files
+backend/uploads/*
+!backend/uploads/.gitkeep
