--- a/backend/env.example
+++ b/backend/env.example
@@ -27,3 +27,7 @@ COINGECKO_API_URL=https://api.coingecko.com/api/v3
 
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:5173
+
+# ALLOWED_ORIGINS (for CORS - comma-separated)
+# If set, this will override FRONTEND_URL and defaults
+# Example: ALLOWED_ORIGINS=https://your-app.vercel.app,https://your-custom-domain.com
